--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: cachix/install-nix-action@v27
         with:
-          nix_path: nixpkgs=channel:nixos-stable
+          nix_path: nixpkgs=channel:nixos-24.05
       - run: nix-build
   container_publish:
     name: Build and publish docker container
@@ -33,8 +33,8 @@ jobs:
         run: docker login ghcr.io -u ${GITHUB_ACTOR} -p "${{ secrets.GITHUB_TOKEN }}"
       - uses: cachix/install-nix-action@v27
         with:
-          nix_path: nixpkgs=channel:nixos-stable
-      - run: nix-build --arg dockerName "'$DOCKER_NAME'" --arg dockerTag "'$DOCKER_TAG'" -A docker
+          nix_path: nixpkgs=channel:nixos-24.05
+      - run: nix-build --arg dockerName "\"$DOCKER_NAME\"" --arg dockerTag "\"$DOCKER_TAG\"" -A docker
       - name: Build and publish docker image
         run: |
           docker load < result
