--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -21,7 +21,7 @@ jobs:
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/container' || startsWith(github.ref, 'refs/tags') # Run only on main or tags
     env:
       DOCKER_NAME: "ghcr.io/${{ github.repository }}/discord-bot"
-      DOCKER_TAG: github.ref == 'refs/heads/main' && 'latest' || github.ref == 'refs/heads/container' && 'testing' || 'tag'
+      DOCKER_TAG: ${{ github.ref == 'refs/heads/main' && 'latest' || github.ref == 'refs/heads/container' && 'testing' || 'tag' }}
     steps:
       - name: Set DOCKER_TAG for tag
         if: startsWith(github.ref, 'refs/tags')
